--- a/700746371_ML_Assignment4.ipynb
+++ b/700746371_ML_Assignment4.ipynb
@@ -15,22 +15,9 @@
       "execution_count": 1,
       "id": "f41da608",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f41da608",
-        "outputId": "f64b6f1b-895e-4033-e54a-2e526b152507"
+        "id": "f41da608"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-1-46cbd9a27894>:9: DeprecationWarning: Please use `pearsonr` from the `scipy.stats` namespace, the `scipy.stats.stats` namespace is deprecated.\n",
-            "  from scipy.stats.stats import pearsonr\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import warnings\n",
         "import numpy as np\n",
@@ -38,7 +25,7 @@
         "import seaborn as sns\n",
         "from sklearn import preprocessing\n",
         "import matplotlib.pyplot as plt\n",
-        "from scipy.stats.stats import pearsonr\n",
+        "from scipy.stats import pearsonr\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, recall_score, precision_score, classification_report, confusion_matrix\n",
@@ -47,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "6e470f2f",
       "metadata": {
         "colab": {
@@ -226,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "6106b529",
       "metadata": {
         "colab": {
@@ -429,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "952e4679",
       "metadata": {
         "colab": {
@@ -462,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "1e50deb9",
       "metadata": {
         "colab": {
@@ -496,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "57b78c70",
       "metadata": {
         "colab": {
@@ -657,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "2ad6f6d4",
       "metadata": {
         "colab": {
@@ -908,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "a628dd17",
       "metadata": {
         "colab": {
@@ -1111,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "d10ee321",
       "metadata": {
         "colab": {
@@ -1285,7 +1272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "c924c089",
       "metadata": {
         "id": "c924c089"
@@ -1387,7 +1374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "91e58a47",
       "metadata": {
         "colab": {
@@ -1417,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "e635c808",
       "metadata": {
         "colab": {
@@ -1450,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "1b2efac1",
       "metadata": {
         "colab": {
@@ -1490,7 +1477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "980c72b0",
       "metadata": {
         "colab": {
@@ -1733,7 +1720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "715047cd",
       "metadata": {
         "colab": {
@@ -1776,7 +1763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "fa3ae240",
       "metadata": {
         "colab": {
@@ -1820,7 +1807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "cd5b4fa3",
       "metadata": {
         "colab": {
@@ -2131,7 +2118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "ca6df8e1",
       "metadata": {
         "colab": {
@@ -2162,7 +2149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "d0da0605",
       "metadata": {
         "id": "d0da0605"
@@ -2187,7 +2174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "fd1ad719",
       "metadata": {
         "id": "fd1ad719"
@@ -2203,7 +2190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "749c6702",
       "metadata": {
         "id": "749c6702"
@@ -2217,7 +2204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "aa205e00",
       "metadata": {
         "colab": {
@@ -2250,7 +2237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "5035f54f",
       "metadata": {
         "colab": {
@@ -2292,7 +2279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "0cfa8e42",
       "metadata": {
         "colab": {
@@ -2507,7 +2494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "c67ed98c",
       "metadata": {
         "colab": {
@@ -2940,7 +2927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "e4728db9",
       "metadata": {
         "colab": {
@@ -2969,7 +2956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "7e7c36c0",
       "metadata": {
         "colab": {
@@ -3030,7 +3017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "a95850e8",
       "metadata": {
         "colab": {
